src/autogen/LatteParser.py
# Generated from /home/patryk/studia/magisterka/mrjp/zadanie2/x86LatteCompiler/Latte.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LatteParser ( Parser ):

    grammarFileName = "Latte.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "'extends'", 
                     "','", "';'", "'('", "')'", "'='", "'++'", "'--'", 
                     "'return'", "'if'", "'else'", "'while'", "'int'", "'string'", 
                     "'boolean'", "'void'", "'&&'", "'||'", "'true'", "'false'", 
                     "'new'", "'.'", "'null'", "'-'", "'!'", "'+'", "'*'", 
                     "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", "'=='", 
                     "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "MULTICOMMENT", "INT", "ID", "WS", "STR" ]

    RULE_program = 0
    RULE_topDef = 1
    RULE_clsattr = 2
    RULE_clsfun = 3
    RULE_fundef = 4
    RULE_arg = 5
    RULE_block = 6
    RULE_stmt = 7
    RULE_type_ = 8
    RULE_item = 9
    RULE_expr = 10
    RULE_unOp = 11
    RULE_addOp = 12
    RULE_mulOp = 13
    RULE_relOp = 14

    ruleNames =  [ "program", "topDef", "clsattr", "clsfun", "fundef", "arg", 
                   "block", "stmt", "type_", "item", "expr", "unOp", "addOp", 
                   "mulOp", "relOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    COMMENT=39
    MULTICOMMENT=40
    INT=41
    ID=42
    WS=43
    STR=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LatteParser.EOF, 0)

        def topDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.TopDefContext)
            else:
                return self.getTypedRuleContext(LatteParser.TopDefContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LatteParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.topDef()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__0) | (1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.ID))) != 0)):
                    break

            self.state = 35
            self.match(LatteParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TopDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_topDef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ClsDefContext(TopDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.TopDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)
        def clsattr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ClsattrContext)
            else:
                return self.getTypedRuleContext(LatteParser.ClsattrContext,i)

        def clsfun(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ClsfunContext)
            else:
                return self.getTypedRuleContext(LatteParser.ClsfunContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClsDef" ):
                return visitor.visitClsDef(self)
            else:
                return visitor.visitChildren(self)


    class TopFunDefContext(TopDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.TopDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def fundef(self):
            return self.getTypedRuleContext(LatteParser.FundefContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopFunDef" ):
                return visitor.visitTopFunDef(self)
            else:
                return visitor.visitChildren(self)


    class ClsExtDefContext(TopDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.TopDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.ID)
            else:
                return self.getToken(LatteParser.ID, i)
        def clsattr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ClsattrContext)
            else:
                return self.getTypedRuleContext(LatteParser.ClsattrContext,i)

        def clsfun(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ClsfunContext)
            else:
                return self.getTypedRuleContext(LatteParser.ClsfunContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClsExtDef" ):
                return visitor.visitClsExtDef(self)
            else:
                return visitor.visitChildren(self)



    def topDef(self):

        localctx = LatteParser.TopDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topDef)
        self._la = 0 # Token type
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = LatteParser.TopFunDefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.fundef()
                pass

            elif la_ == 2:
                localctx = LatteParser.ClsDefContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.match(LatteParser.T__0)
                self.state = 39
                self.match(LatteParser.ID)
                self.state = 40
                self.match(LatteParser.T__1)
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 41
                        self.clsattr() 
                    self.state = 46
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.ID))) != 0):
                    self.state = 47
                    self.clsfun()
                    self.state = 52
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 53
                self.match(LatteParser.T__2)
                pass

            elif la_ == 3:
                localctx = LatteParser.ClsExtDefContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.match(LatteParser.T__0)
                self.state = 55
                self.match(LatteParser.ID)
                self.state = 56
                self.match(LatteParser.T__3)
                self.state = 57
                self.match(LatteParser.ID)
                self.state = 58
                self.match(LatteParser.T__1)
                self.state = 62
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 59
                        self.clsattr() 
                    self.state = 64
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.ID))) != 0):
                    self.state = 65
                    self.clsfun()
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 71
                self.match(LatteParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClsattrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.ID)
            else:
                return self.getToken(LatteParser.ID, i)

        def getRuleIndex(self):
            return LatteParser.RULE_clsattr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClsattr" ):
                return visitor.visitClsattr(self)
            else:
                return visitor.visitChildren(self)




    def clsattr(self):

        localctx = LatteParser.ClsattrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_clsattr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.type_()
            self.state = 75
            self.match(LatteParser.ID)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LatteParser.T__4:
                self.state = 76
                self.match(LatteParser.T__4)
                self.state = 77
                self.match(LatteParser.ID)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.match(LatteParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClsfunContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fundef(self):
            return self.getTypedRuleContext(LatteParser.FundefContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_clsfun

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClsfun" ):
                return visitor.visitClsfun(self)
            else:
                return visitor.visitChildren(self)




    def clsfun(self):

        localctx = LatteParser.ClsfunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_clsfun)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.fundef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FundefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)


        def ID(self):
            return self.getToken(LatteParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(LatteParser.BlockContext,0)


        def arg(self):
            return self.getTypedRuleContext(LatteParser.ArgContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_fundef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFundef" ):
                return visitor.visitFundef(self)
            else:
                return visitor.visitChildren(self)




    def fundef(self):

        localctx = LatteParser.FundefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fundef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.type_()
            self.state = 88
            self.match(LatteParser.ID)
            self.state = 89
            self.match(LatteParser.T__6)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.ID))) != 0):
                self.state = 90
                self.arg()


            self.state = 93
            self.match(LatteParser.T__7)
            self.state = 94
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.Type_Context)
            else:
                return self.getTypedRuleContext(LatteParser.Type_Context,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.ID)
            else:
                return self.getToken(LatteParser.ID, i)

        def getRuleIndex(self):
            return LatteParser.RULE_arg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = LatteParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.type_()
            self.state = 97
            self.match(LatteParser.ID)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LatteParser.T__4:
                self.state = 98
                self.match(LatteParser.T__4)
                self.state = 99
                self.type_()
                self.state = 100
                self.match(LatteParser.ID)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StmtContext)
            else:
                return self.getTypedRuleContext(LatteParser.StmtContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LatteParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(LatteParser.T__1)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__1) | (1 << LatteParser.T__5) | (1 << LatteParser.T__6) | (1 << LatteParser.T__11) | (1 << LatteParser.T__12) | (1 << LatteParser.T__14) | (1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.T__21) | (1 << LatteParser.T__22) | (1 << LatteParser.T__23) | (1 << LatteParser.T__26) | (1 << LatteParser.T__27) | (1 << LatteParser.INT) | (1 << LatteParser.ID) | (1 << LatteParser.STR))) != 0):
                self.state = 108
                self.stmt()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(LatteParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ExprContext)
            else:
                return self.getTypedRuleContext(LatteParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAss" ):
                return visitor.visitAss(self)
            else:
                return visitor.visitChildren(self)


    class DecrContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecr" ):
                return visitor.visitDecr(self)
            else:
                return visitor.visitChildren(self)


    class RetContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRet" ):
                return visitor.visitRet(self)
            else:
                return visitor.visitChildren(self)


    class EmptyContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmpty" ):
                return visitor.visitEmpty(self)
            else:
                return visitor.visitChildren(self)


    class CondContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self):
            return self.getTypedRuleContext(LatteParser.StmtContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)


    class CondElseContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StmtContext)
            else:
                return self.getTypedRuleContext(LatteParser.StmtContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondElse" ):
                return visitor.visitCondElse(self)
            else:
                return visitor.visitChildren(self)


    class VRetContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVRet" ):
                return visitor.visitVRet(self)
            else:
                return visitor.visitChildren(self)


    class IncrContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncr" ):
                return visitor.visitIncr(self)
            else:
                return visitor.visitChildren(self)


    class BlockStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(LatteParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)


    class DeclContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ItemContext)
            else:
                return self.getTypedRuleContext(LatteParser.ItemContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self):
            return self.getTypedRuleContext(LatteParser.StmtContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class SExpContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSExp" ):
                return visitor.visitSExp(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = LatteParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = LatteParser.EmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(LatteParser.T__5)
                pass

            elif la_ == 2:
                localctx = LatteParser.BlockStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.block()
                pass

            elif la_ == 3:
                localctx = LatteParser.DeclContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.type_()
                self.state = 119
                self.item()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LatteParser.T__4:
                    self.state = 120
                    self.match(LatteParser.T__4)
                    self.state = 121
                    self.item()
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 127
                self.match(LatteParser.T__5)
                pass

            elif la_ == 4:
                localctx = LatteParser.AssContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.expr(0)
                self.state = 130
                self.match(LatteParser.T__8)
                self.state = 131
                self.expr(0)
                self.state = 132
                self.match(LatteParser.T__5)
                pass

            elif la_ == 5:
                localctx = LatteParser.IncrContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 134
                self.expr(0)
                self.state = 135
                self.match(LatteParser.T__9)
                self.state = 136
                self.match(LatteParser.T__5)
                pass

            elif la_ == 6:
                localctx = LatteParser.DecrContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 138
                self.expr(0)
                self.state = 139
                self.match(LatteParser.T__10)
                self.state = 140
                self.match(LatteParser.T__5)
                pass

            elif la_ == 7:
                localctx = LatteParser.RetContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 142
                self.match(LatteParser.T__11)
                self.state = 143
                self.expr(0)
                self.state = 144
                self.match(LatteParser.T__5)
                pass

            elif la_ == 8:
                localctx = LatteParser.VRetContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 146
                self.match(LatteParser.T__11)
                self.state = 147
                self.match(LatteParser.T__5)
                pass

            elif la_ == 9:
                localctx = LatteParser.CondContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 148
                self.match(LatteParser.T__12)
                self.state = 149
                self.match(LatteParser.T__6)
                self.state = 150
                self.expr(0)
                self.state = 151
                self.match(LatteParser.T__7)
                self.state = 152
                self.stmt()
                pass

            elif la_ == 10:
                localctx = LatteParser.CondElseContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 154
                self.match(LatteParser.T__12)
                self.state = 155
                self.match(LatteParser.T__6)
                self.state = 156
                self.expr(0)
                self.state = 157
                self.match(LatteParser.T__7)
                self.state = 158
                self.stmt()
                self.state = 159
                self.match(LatteParser.T__13)
                self.state = 160
                self.stmt()
                pass

            elif la_ == 11:
                localctx = LatteParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 162
                self.match(LatteParser.T__14)
                self.state = 163
                self.match(LatteParser.T__6)
                self.state = 164
                self.expr(0)
                self.state = 165
                self.match(LatteParser.T__7)
                self.state = 166
                self.stmt()
                pass

            elif la_ == 12:
                localctx = LatteParser.SExpContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 168
                self.expr(0)
                self.state = 169
                self.match(LatteParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_type_

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StrContext(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStr" ):
                return visitor.visitStr(self)
            else:
                return visitor.visitChildren(self)


    class BoolContext(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)


    class ClassContext(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)
